@@ -17,6 +17,12 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Implement EVENT_TELL.
+ plugins/cfpython/cfpython.c
+ plugins/template/plugin_template.c
+ server/c_chat.c plugins.c
+Nicolas Weeger 2007-04-21
+
 server/apply.c: potions of life now won't affect player if their level is too low.
 Nicolas Weeger 2007-04-20
 
